<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_favorites"
        android:icon="@android:drawable/btn_star"
        android:title="@string/menu_favorites" />

    <item
        android:id="@+id/menu_words"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/menu_words" />

    <item
        android:id="@+id/menu_test"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_test" />
    <item
        android:id="@+id/menu_result"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/menu_result" />

    <item
        android:id="@+id/menu_translate"
        android:icon="@drawable/ic_baseline_public_24"
        android:title="@string/menu_translate" />
</menu>