<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".FragmentTranslate">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="@string/translate_title"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="4"
            android:background="@drawable/linearlayout_border_3"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/translateOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_border_2"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/translate_eng_to_kor"
                android:textColor="@color/textview_pressed_textcolor_4"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/translateBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_pressed_background_tint"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:tint="@color/button_pressed_tint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="4"
            android:background="@drawable/linearlayout_border_3"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_border_2"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/translate_result"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/translateResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lineHeight="20dp"
                        android:text="@string/translate_emtpy"
                        android:textColor="#9F9F9F"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>